<resources>
    <string name="app_name">AndroidMaps</string>

    <string name="hello_world">Here we show house more details!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_application_objects">ApplicationObjects</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_google_maps">Google maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_house_details">HouseDetailsActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_registration_buyer">RegistrationBuyerActivity</string>
    <string name="title_activity_update_user_details">UpdateUserDetailsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_menu">Menu</string>
    <!--here menu items -->
    <string-array name="menu_array">
        <item>profile</item>
        <item>search</item>
        <item>MyHistory</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>
    <string-array name="menu_icons">
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_setting</item>
        <item>@drawable/ic_logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_apartment">AddApartment</string>
    <string name="add_new_apartment">Add new Apartment</string>
    <string name="street_name">Street name: </string>
    <string name="street_name_hint">Street name</string>
    <string name="number">Number:</string>
    <string name="location">Location</string>
    <string name="house_number">House #:</string>
    <string name="apt_number">Apt. #:</string>
    <string name="city_hint">City</string>
    <string name="city">City:</string>
    <string name="structure">Structure</string>
    <string name="roomsTV">Rooms:</string>
    <string name="rooms_hint"># of rooms</string>
    <string name="apt_area">Apt. area:</string>
    <string name="house_num_hint">House #</string>
    <string name="apt_num_hint">Apt. #</string>
    <string name="area_hint">Area in M*M</string>
    <string name="elevator">Elevator</string>
    <string name="sun_balcony">Sun Balcony</string>
    <string name="mamad">Mamad</string>
    <string name="service_balcony">Service Balcony</string>
    <string name="parking">Parking</string>
    <string name="handicapped_access">Handicapped Access</string>
    <string name="storage">Storage</string>
    <string name="additional_details_tv">Additional Details</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="estimated_price_hint">Estimated Price</string>
    <string name="ok_button">OK</string>
    <string name="select_from_map">Select from map</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_find_by_address">FindByAddressActivity</string>
    <string name="title_activity_results">ResultsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_imgs">showImgsActivity</string>
    <string name="territory_hint">Territory</string>
    <string name="territoryTV">Territory:</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="title_activity_add_new_apt">AddNewApt</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="txt_help">Help</string>
    <string name="txt_locations">Locations</string>
    <string name="title_activity_normal">NormalActivity</string>
</resources>
