<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LocationTVAddApt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/StreetNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_name" />

            <EditText
                android:id="@+id/streetNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:ems="10"
                android:hint="@string/street_name_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/cityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:ems="10"
                android:hint="@string/city_hint"
                android:inputType="textPersonName" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/houseNumTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_number" />

            <EditText
                android:id="@+id/houseNumEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:ems="10"
                android:hint="@string/house_num_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/aptNumTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apt_number" />

            <EditText
                android:id="@+id/aptNumEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:ems="10"
                android:hint="@string/apt_num_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Floor:" />

            <EditText
                android:id="@+id/floorEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:ems="10"
                android:hint="Floor #"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/territoryTV" />

            <EditText
                android:id="@+id/territoryEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:ems="10"
                android:hint="@string/territory_hint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/getFromMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_from_map" />
        </LinearLayout>

        <TextView
            android:id="@+id/structureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/structure" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roomsTV" />

            <EditText
                android:id="@+id/roomNumEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rooms_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/aptAreaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0sp"
                android:paddingStart="20sp"
                android:text="@string/apt_area" />

            <EditText
                android:id="@+id/aptAreaEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/area_hint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/elevatorCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elevator" />

            <CheckBox
                android:id="@+id/sunBalconyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_balcony" />

            <CheckBox
                android:id="@+id/mamadCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mamad" />

            <CheckBox
                android:id="@+id/serviceBalconyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_balcony" />

            <CheckBox
                android:id="@+id/parkingCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking" />

            <CheckBox
                android:id="@+id/handicappedAccessCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handicapped_access" />

            <CheckBox
                android:id="@+id/storageCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage" />

            <CheckBox
                android:id="@+id/airConditionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Air Condition" />

            <CheckBox
                android:id="@+id/renovatedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Renovated" />

            <CheckBox
                android:id="@+id/furnishedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Furnished" />

            <CheckBox
                android:id="@+id/barsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bars" />

            <CheckBox
                android:id="@+id/unitCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unit" />

            <CheckBox
                android:id="@+id/pandoorCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pandoor" />

        </LinearLayout>

        <TextView
            android:id="@+id/additionalDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/additional_details_tv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/estimated_price_hint"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/estimated_price_hint" />

        <CheckBox
            android:id="@+id/sellCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell" />

        <CheckBox
            android:id="@+id/rentCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:onClick="addNewApt"
            android:text="@string/ok_button" />
    </LinearLayout>

</ScrollView>